fix: correct rosebudai link with prompt autorun; enhanced context

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-manual": "node scripts/manual-test.js",
     "test-context": "node scripts/test-context.js",
     "test-url": "node scripts/test-url-format.js",
+    "test-fixes": "node scripts/test-all-fixes.js",
     "debug": "node scripts/debug-bot.js",
     "setup": "echo Please copy env.example to .env and fill in your credentials"
   },
