--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test-context": "node scripts/test-context.js",
     "test-url": "node scripts/test-url-format.js",
     "test-fixes": "node scripts/test-all-fixes.js",
+    "test-gemini": "node run-gemini-test.js",
+    "test-gemini-all": "node test-gemini-2.5-samples.js",
+    "test-scenarios": "node run-gemini-test.js list",
     "debug": "node scripts/debug-bot.js",
     "setup": "echo Please copy env.example to .env and fill in your credentials"
   },
